Fixed some tests.