@@ -13,11 +13,13 @@
 	
 	<properties>
 		<webapps>webapps</webapps>
-		<ikube.war>ikube.war</ikube.war>
+		<!--<ikube.war>ikube.war</ikube.war>-->
 		<final.name>${project.build.finalName}.${project.packaging}</final.name>
 		<maven.build.timestamp.format>dd-MM-yyyy HH:mm:ss</maven.build.timestamp.format>
-		<jersey.version>1.9.1</jersey.version>
-		<jaxb-api.version>2.2.1</jaxb-api.version>
+
+		<!--<jersey.version>1.9.1</jersey.version>-->
+		<!--<jaxb-api.version>2.2.1</jaxb-api.version>-->
+        <jetty-version>7.6.15.v20140411</jetty-version>
 	</properties>
 
 	<build>
@@ -70,60 +72,31 @@
 				</executions>
 			</plugin>
 
-            <plugin>
-                <groupId>org.apache.tomcat.maven</groupId>
-                <artifactId>tomcat7-maven-plugin</artifactId>
-                <version>2.1</version>
-                <configuration>
-                    <path>/ikube</path>
-                    <url>http://localhost:8080/manager</url>
-                    <update>true</update>
-                    <warDirectory>./</warDirectory>
-                    <!--<contextFile>${basedir}/src/main/webapp/META-INF/context.xml</contextFile>-->
-                    <systemProperties>
-                        <jvmArgs>-Xms512m -Xmx4096m -XX:MaxPermSize=256m -XX:+CMSClassUnloadingEnabled</jvmArgs>
-                        <JAVA_OPTS>-Xms512m -Xmx4096m -XX:MaxPermSize=256m -XX:+CMSClassUnloadingEnabled</JAVA_OPTS>
-                    </systemProperties>
-                </configuration>
-
-                <dependencies>
-                    <!--<dependency>
-                        <groupId>com.oracle</groupId>
-                        <artifactId>ojdbc14</artifactId>
-                        <version>10.2.0.5.0</version>
-                    </dependency>-->
-                </dependencies>
-
-                <executions>
-                    <execution>
-                        <configuration>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
-			<!-- 
+			<!--
 				This plugin starts a Jetty server before the integration tests and stops it after the 
 				integration tests. It can also be used to start a jetty server from the command line for testing. 
 			-->
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
-				<artifactId>maven-jetty-plugin</artifactId>
-				<version>6.1.25</version>
+				<artifactId>jetty-maven-plugin</artifactId>
+				<version>${jetty-version}</version>
 				<configuration>
 					<stopKey>stop</stopKey>
 					<stopPort>9180</stopPort>
-					<scanIntervalSeconds>10000</scanIntervalSeconds>
-					<contextPath>/ikube</contextPath>
+                    <scanIntervalSeconds>10000</scanIntervalSeconds>
+                    <webApp>
+                        <contextPath>/ikube</contextPath>
+                    </webApp>
                     <!--<jettyConfig>
                         <jvmArgs>-Xms512m -Xmx4096m -XX:MaxPermSize=256m -XX:+CMSClassUnloadingEnabled</jvmArgs>
                     </jettyConfig>-->
-					<scanTargets>
+					<!--<scanTargets>
 						<scanTarget>src/main/resources</scanTarget>
 						<scanTarget>src/main/webapp</scanTarget>
-					</scanTargets>
-					<connectors>
-						<connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
+					</scanTargets>-->
+                    <connectors>
+                        <!--implementation="org.mortbay.jetty.nio.SelectChannelConnector"-->
+						<connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
 							<port>9090</port>
 							<maxIdleTime>60000</maxIdleTime>
 						</connector>
@@ -150,13 +123,13 @@
 					</execution>
 				</executions>
 				<dependencies>
-					<dependency>
-						<!--
+					<!--<dependency>
+						&lt;!&ndash;
 							XXX It is included to force commons-logging to use 2.5 API instead of 2.3. This caused 
 							by internal dependencies of Jetty, which use version 2.5, but have it packaged in a different 
 							group ID: org.mortbay.jetty. TODO (Roman): If it gets broken again, try to "exclude" servlet-api 
 							dependencies from commons-logging and commons-fileupload. 
-						-->
+						&ndash;&gt;
 						<groupId>javax.servlet</groupId>
 						<artifactId>servlet-api</artifactId>
 						<version>2.5</version>
@@ -167,7 +140,7 @@
 						<artifactId>commons-logging</artifactId>
 						<version>1.1</version>
 						<type>jar</type>
-					</dependency>
+					</dependency>-->
 				</dependencies>
 			</plugin>
 		</plugins>
@@ -180,6 +153,44 @@
 			<version>${project.version}</version>
 			<scope>compile</scope>
 		</dependency>
+
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-server</artifactId>
+            <version>${jetty-version}</version>
+            <type>jar</type>
+            <scope>compile</scope>
+            <!--<exclusions>
+                <exclusion>
+                    <groupId>javax.servlet</groupId>
+                    <artifactId>servlet-api</artifactId>
+                </exclusion>
+            </exclusions>-->
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-util</artifactId>
+            <version>${jetty-version}</version>
+            <type>jar</type>
+            <scope>compile</scope>
+            <!--<exclusions>
+                <exclusion>
+                    <groupId>javax.servlet</groupId>
+                    <artifactId>servlet-api</artifactId>
+                </exclusion>
+            </exclusions>-->
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>example-jetty-embedded</artifactId>
+            <version>${jetty-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-embedded-examples</artifactId>
+            <version>7.0.0.M2</version>
+        </dependency>
+
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
@@ -209,33 +220,6 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.mortbay.jetty</groupId>
-			<artifactId>jetty</artifactId>
-			<!-- <version>7.0.0.v20091005</version> -->
-			<version>6.1.11</version>
-			<type>jar</type>
-			<scope>compile</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>javax.servlet</groupId>
-                    <artifactId>servlet-api</artifactId>
-                </exclusion>
-            </exclusions>
-		</dependency>
-		<dependency>
-			<groupId>org.mortbay.jetty</groupId>
-			<artifactId>jetty-util</artifactId>
-			<version>6.1.11</version>
-			<type>jar</type>
-            <scope>compile</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>javax.servlet</groupId>
-                    <artifactId>servlet-api</artifactId>
-                </exclusion>
-            </exclusions>
-		</dependency>
 
 		<!--<dependency>
 			<groupId>com.sun.xml.bind</groupId>
@@ -243,12 +227,12 @@
 			<version>2.1.9</version>
 			<scope>compile</scope>
 		</dependency>-->
-		<dependency>
+		<!--<dependency>
 			<groupId>javax.ws.rs</groupId>
 			<artifactId>jsr311-api</artifactId>
 			<version>1.0</version>
 			<scope>compile</scope>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>org.apache.tiles</groupId>
 			<artifactId>tiles-jsp</artifactId>
